kubernetes/components-ui/components-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: components-ui
  labels:
    app: components-ui
spec:
  selector:
    app: components-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
