kubernetes/components-ui/components-ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: components-ui
  labels:
    app: components-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: components-ui.davidcamelo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: components-ui
                port:
                  number: 80
  tls:
    - hosts:
        - components-ui.davidcamelo.com
      secretName: components-ui-ingress
